adjusted margins and fixed annoying bug with no gap

--- a/sspi_flask_app/client/static/sass/data-widget.scss
+++ b/sspi_flask_app/client/static/sass/data-widget.scss
@@ -18,17 +18,14 @@ $black: rgb(42, 41, 43);
     // min-height: 240px;
 // }
 
-.grid-stack > .grid-stack-item {
+.grid-stack-item-content {
+    margin: 0.9em;
     background-color: $white;
     border-radius: 0.5em;
     color: $black;
     // box-shadow: rgba(47, 47, 51, 0.4) 0px 7px 29px 0px;
 }
 
-.grid-stack-item-content {
-    left: 10px;
-    right: 10px;
-}
 .widget-controls {
     z-index: 1;
     display: flex;
